Complete migration back to Java 8